git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1854 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/README
+++ b/html5tree/README
@@ -58,7 +58,7 @@ After the database is running, follow the next steps:
 The project is provided as a netbeans-project. If you want to change the code, you have to:
 
 * Download (http://netbeans.org/) and install [[Technology:NetBeans]]
-* "Open project" and select the html5ajax-folder
+* "Open project" and select the html5tree-folder
 
 == Contributors ==
 
