git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1886 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/README
+++ b/html5tree/README
@@ -30,12 +30,13 @@
 
 == Motivation ==
 
-* A company with many departments and employees is not clearly arranged with the current [[101feature:Interaction#navigation|navigation]]. Unlike, a treeview provides a complete overview of the whole company without exhausting much space in the GUI.
-* This project enhances the [[101implementation:html5ajax|html5ajax]]-implementation with a treeview and a refitted [[101feature:Interaction|GUI]].
+* A company with many departments and employees is not clearly arranged with the current [[101feature:Interaction#Navigation|navigation]]. Unlike, a treeview provides a complete overview of the whole company without exhausting much space in the GUI.
+* This implementation extends the [[101implementation:html5ajax|html5ajax]]-implementation with a treeview and a refitted [[101feature:Interaction|GUI]].
+* It also introduces new [[101feature:Create|create]]- and [[101feature:Delete|delete]]-features for the company.
 
 == Illustration ==
 
-
+* To get an overview of the [[Technology:JSON]]-messages, visit the [[101implementation:html5ajax]] project.
 
 == Architecture ==
 
