--- a/html5tree/README
+++ b/html5tree/README
@@ -38,7 +38,7 @@
 == Illustration ==
 
 * To get an overview of the [[Technology:JSON]]-messages, visit the [[101implementation:html5ajax]] project.
-* Example for a [[Technology:JSON]]-message which [[101feature:Delete|deletes]] a department:
+* This is an example for a [[Technology:JSON]]-message, which [[101feature:Delete|deletes]] a department:
 
 <syntaxhighlight lang="text">
 {
@@ -48,7 +48,7 @@
 }
 </syntaxhighlight>
 
-This simple request deletes the department with the id 1 at the server. In this implementation, the cascading delete anchored in the database provides a recursive deletion for all containing subdepartments:
+The simple request is received by the [[server-side]] [[Language:php]] script and deletes the department with the id 1 on the [[server]]. In this implementation, the cascading delete anchored in the database provides a recursive deletion for all containing subdepartments:
 
 <syntaxhighlight lang="php">
         $request = "DELETE FROM department WHERE id = " . $id;
