git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1890 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/README
+++ b/html5tree/README
@@ -57,7 +57,7 @@ The simple request is received by the [[server-side]] [[Language:php]] script an
 
 == Architecture ==
 
-
+* The architecture is similar to [[101implementation:html5ajax]], except that most of the html-elements of the view are located in the [this!!index.html].
 
 == Usage ==
 
