git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1891 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/README
+++ b/html5tree/README
@@ -58,6 +58,7 @@ The simple request is received by the [[server-side]] [[Language:php]] script an
 == Architecture ==
 
 * The architecture is similar to [[101implementation:html5ajax]], except that most of the html-elements of the view are located in the [this!!index.html].
+* The needed elements for [[101feature:Company|departments]] and [[101feature:Company|employees]] are set visible as required.
 
 == Usage ==
 
