git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2061 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5tree/README
+++ b/html5tree/README
@@ -28,6 +28,7 @@
 * [[101feature:Interaction]]
 * [[101feature:Precedence]]
 * [[101feature:Validation]]
+* [[101feature:Visualization]]
 
 == Motivation ==
 
