git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2272 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -1,11 +1,11 @@
 == Intent ==
 
-[[web programming]] with [[Technology:JSF]]
+[[web programming]] with [[Technology:JavaServer Faces]]
 
 == Languages ==
 
-[[Language:Java]]
-[[Language:XHTML]]
+* [[Language:Java]]
+* [[Language:XHTML]]
 
 == Technologies ==
 
