git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2273 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -9,12 +9,20 @@
 
 == Technologies ==
 
+* [[Technology:Hibernate]]
+* [[Language:Java]]-[[:Category:Annotation|annotations]]
+* [[Technology:NetBeans]]
+* [[Technology:Glassfish]]
+
 == Features ==
 
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
 * [[101feature:Interaction]]
+* [[101feature:Persistence]]
+* [[101feature:Precedence]]
+* [[101feature:Validation]]
 
 == Motivation ==
 
