git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2274 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -6,9 +6,12 @@
 
 * [[Language:Java]]
 * [[Language:XHTML]]
+* [[Language:CSS]]
+* [[Language:XML]]
 
 == Technologies ==
 
+* [[Technology:JavaServer Faces]]
 * [[Technology:Hibernate]]
 * [[Language:Java]]-[[:Category:Annotation|annotations]]
 * [[Technology:NetBeans]]
