git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2275 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -29,6 +29,8 @@
 
 == Motivation ==
 
+This implementation covers the popular approach for [[Web-application programming]] with [[Technology:JavaServer Faces]].
+
 == Illustration ==
 
 == Architecture ==
