git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2277 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -37,7 +37,7 @@ This implementation covers the popular approach for [[Web-application programmin
 
 == Usage ==
 
-You need a web- and sql-server to use this application. In this tutorial both will be taken by XAMPP: http://www.apachefriends.org/en/xampp.html
+You need an sql-server to use this application. In this tutorial both will be taken by XAMPP: http://www.apachefriends.org/en/xampp.html
 
 You can use the ''company.sql'' and ''sampleCompany.sql'' of [[101implementation:mySql]] for this project.
 
