git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2284 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -29,7 +29,7 @@
 
 == Motivation ==
 
-This implementation covers the popular approach for [[Web-application programming]] with [[Technology:JavaServer Faces]].
+This implementation covers the popular approach for [[Web-application programming]] with [[Technology:JavaServer Faces]]. It introduces the [[Technology:Glassfish]] [[webserver]]. The implementation illustrates the use of [[Pattern:Model View Controller|MVC]] and [[Pattern:Data Access Object]]. The view and controller are implemented with [[Technology:JavaServer Faces]], where the model is implemented with [[Technology:Hibernate]].
 
 == Illustration ==
 
