git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2285 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -33,6 +33,30 @@ This implementation covers the popular approach for [[Web-application programmin
 
 == Illustration ==
 
+The features [[101feature:Cut]] and [[101feature:Total]] are implemented by [[Technology:Java Beans]]. In case of [[101feature:Company|company]] the [this!!org.softlang.jsf/web/company.xhtml company.xhtml] contains a button:
+
+<syntaxhighlight lang="xml">
+    <h:commandButton value="cut" actionListener="#{companyBean.cut()}"/>
+</syntaxhighlight>
+
+This button invokes the method ''cut()'' in [this!!org.softlang.jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java]:
+
+<syntaxhighlight lang="java">
+    public void cut() {
+        HibernateUtil.getSessionFactory().getCurrentSession().beginTransaction();
+        DAOFactory daoFactory = DAOFactory.instance(DAOFactory.HIBERNATE);
+        EmployeeDAO employeeDAO = daoFactory.getEmployeeDAO();
+        
+        for (Employee employee : employees) {
+            employee.setSalary(employee.getSalary() / 2);
+            employeeDAO.makePersistent(employee);
+        }
+        
+        total = total / 2;
+        HibernateUtil.getSessionFactory().getCurrentSession().getTransaction().commit();
+    }
+</syntaxhighlight>
+
 == Architecture ==
 
 == Usage ==
