git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2287 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -43,7 +43,7 @@ The features [[101feature:Cut]] and [[101feature:Total]] are implemented by [[Te
 
 </syntaxhighlight>
 
-This button invokes the method ''cut()'' in [this!!org.softlang.jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java]:
+The ''h:commandButton'' creates an html-button with the name "cut", specified by the attribute ''value''. The action-listener invokes the method ''cut()'' in the managed [[Technology:Java Beans|bean]] [this!!org.softlang.jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java]:
 
 <syntaxhighlight lang="java">
 
