--- a/jsf/README
+++ b/jsf/README
@@ -43,7 +43,7 @@ The features [[101feature:Cut]] and [[101feature:Total]] are implemented by [[Te
 
 </syntaxhighlight>
 
-The ''h:commandButton'' creates an html-button with the name "cut", specified by the attribute ''value''. The action-listener invokes the method ''cut()'' in the managed [[Technology:Java Beans|bean]] [this!!org.softlang.jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java]:
+The ''commandButton'' creates an html-button with the name "cut", specified by the attribute ''value''. The action-listener invokes the method ''cut()'' in the managed [[Technology:Java Beans|bean]] [this!!org.softlang.jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java]:
 
 <syntaxhighlight lang="java">
 
@@ -66,7 +66,9 @@ The ''h:commandButton'' creates an html-button with the name "cut", specified by
 
 == Architecture ==
 
-* The architecture is based on the [[Pattern:Model View Controller|MVC]]-Pattern. View and Controller are implemented with the [[Technology:JavaServer Faces|JSF]]-technology. The [[101feature:Interaction|GUI]] is made with [[Technology:Facelets]], e. g. [this!!org.softlang.jsf/web/company.xhtml company.xhtml], [this!!org.softlang.jsf/web/department.xhtml department.xhtml], [this!!org.softlang.jsf/web/employee.xhtml employee.xhtml].
+* The architecture is based on the [[Pattern:Model View Controller|MVC]]-Pattern. View and Controller are implemented with the [[Technology:JavaServer Faces|JSF]]-technology. The view is made with [[Technology:Facelets]], e. g. [this!!org.softlang.jsf/web/company.xhtml company.xhtml], [this!!org.softlang.jsf/web/department.xhtml department.xhtml], [this!!org.softlang.jsf/web/employee.xhtml employee.xhtml]. The controller is made with [[Technology:Java Beans#Managed Beans|managed beans]]. The view invokes the specific methods of this controller [this!!org.softlang.jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java], [this!!org.softlang.jsf/src/java/company/beans/jsf/DepartmentBean.java DepartmentBean.java] and [this!!org.softlang.jsf/src/java/company/beans/jsf/EmployeeBean.java EmployeeBean.java].
+
+* The grid for the main [[101feature:Interaction|GUI]] features is implemented via template ([this!!org.softlang.jsf/web/template.xhtml template.xhtml]).
 
 == Usage ==
 
