--- a/jsf/README
+++ b/jsf/README
@@ -68,6 +68,10 @@ The ''commandButton'' creates an html-button with the name "cut", specified by t
 
 * The architecture is based on the [[Pattern:Model View Controller|MVC]]-Pattern. View and Controller are implemented with the [[Technology:JavaServer Faces|JSF]]-technology. The view is made with [[Technology:Facelets]], e. g. [this!!org.softlang.jsf/web/company.xhtml company.xhtml], [this!!org.softlang.jsf/web/department.xhtml department.xhtml], [this!!org.softlang.jsf/web/employee.xhtml employee.xhtml]. The controller is made with [[Technology:Java Beans#Managed Beans|managed beans]]. The view invokes the specific methods of this controller [this!!org.softlang.jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java], [this!!org.softlang.jsf/src/java/company/beans/jsf/DepartmentBean.java DepartmentBean.java] and [this!!org.softlang.jsf/src/java/company/beans/jsf/EmployeeBean.java EmployeeBean.java].
 
+* The [[Technology:JavaServer Faces|JSF]]-framework creates [[Language:HTML]]- and [[Language:JavaScript]]-code out of the [[Technology:Facelets]]. Within this [[Language:JavaScript]], the [[client]] creates requests to the [[server]] via [[Technology:XMLHttpRequest]].
+
+* The [[Technology:Java Beans]] encapsulate business methods to create the webservices, which send the responses to the [[client]]-requests.
+
 * The grid for the main [[101feature:Interaction|GUI]] features is implemented via template ([this!!org.softlang.jsf/web/template.xhtml template.xhtml]).
 
 == Usage ==
