git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2293 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seam/README
+++ b/seam/README
@@ -34,7 +34,7 @@ the SEAM framework.
 == Usage ==
 
 * '''Requirements:'''
-** [[Technology:JBoss|JBoss]]-4.2.x (http://sourceforge.net/projects/jboss/files/JBoss/JBoss-4.2.3.GA)
+** [[Technology:JBoss Application Server]] Version 4.2.x (http://sourceforge.net/projects/jboss/files/JBoss/JBoss-4.2.3.GA)
 ** [[Technology:Eclipse]]
 * '''Import:'''
 ** Import the seam project as a java project into eclipse.
