git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2294 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/strutsAnnotation/README
+++ b/strutsAnnotation/README
@@ -119,7 +119,7 @@ the next listing.
 	
 === Requirements ===
 	
-	        Any web server based on Servlet technology, such as Tomcat.
+	        Any web server based on Servlet technology, such as [[Technology:Apache Tomcat]].
 	        
 === Build === 
 
@@ -135,4 +135,3 @@ the next listing.
 == Contributors ==
 	   
 * {{101contributor|Rodrigo Bonifacio|developer}}
- 
