git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2295 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/strutsXml/README
+++ b/strutsXml/README
@@ -153,7 +153,7 @@ value of a call to the cutSalaries method.
 == Usage ==
 
 (a) run mvn clean package
-(b) copy the target/struts.war file to the webapps direcoty of your Tomcat distribution
+(b) copy the target/struts.war file to the webapps direcoty of your [[Technology:Apache Tomcat]] distribution
 (c) start your Tomcat distribution
 (d) point your browser to http://localhost:8080/struts (replacing the port if necessary) 
 
