git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2334 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/README
+++ b/jsf/README
@@ -31,15 +31,13 @@
 
 This implementation covers the popular approach for [[Web-application programming]] with [[Technology:JavaServer Faces]]. It introduces the [[Technology:GlassFish]] [[:Category:Webserver]]. The implementation illustrates the use of the [[Pattern:Model View Controller|MVC]]- and [[Pattern:Data Access Object|DAO]]-[[:Category:Pattern|patterns]]. The view and controller are implemented with [[Technology:JavaServer Faces]], where the model is implemented with [[Technology:Hibernate]].
 
-== Illustration ==
-
 The features [[101feature:Cut]] and [[101feature:Total]] are implemented by [[Technology:Java Beans]]. In case of [[101feature:Company|company]] the [this!!jsf/web/company.xhtml company.xhtml] contains a button:
 
 <syntaxhighlight lang="xml" source="jsf/web/company.xhtml" line>
 <h:commandButton value="cut" actionListener="#{companyBean.cut()}"/>
 </syntaxhighlight>
 
-The ''commandButton'' creates an html-button with the name "cut", specified by the attribute ''value''. The action-listener invokes the method ''cut()'' in the managed [[Technology:Java Beans|bean]] [this!!jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java]:
+The commandButton creates an html-button with the name "cut", specified by the attribute value. The action-listener invokes the method cut() in the managed [[Technology:Java Beans|bean]] [this!!jsf/src/java/company/beans/jsf/CompanyBean.java CompanyBean.java]:
 
 <syntaxhighlight lang="java" source="jsf/src/java/company/beans/jsf/CompanyBean.java" line>
 // this method cuts all employees of the loaded company
