--- a/jsf/README
+++ b/jsf/README
@@ -29,7 +29,7 @@
 
 == Motivation ==
 
-This implementation covers the popular approach for [[Web-application programming]] with [[Technology:JavaServer Faces]]. It introduces the [[Technology:GlassFish]] [[:Category:Webserver]]. The implementation illustrates the use of the [[Pattern:Model View Controller|MVC]]- and [[Pattern:Data Access Object|DAO]]-[[:Category:Pattern|patterns]]. The view and controller are implemented with [[Technology:JavaServer Faces]], where the model is implemented with [[Technology:Hibernate]].
+This implementation covers the popular approach for [[Web-application programming]] with [[Technology:JavaServer Faces]]. It introduces the [[Technology:GlassFish]] [[:Category:Application server]]. The implementation illustrates the use of the [[Pattern:Model View Controller|MVC]]- and [[Pattern:Data Access Object|DAO]]-[[:Category:Pattern|patterns]]. The view and controller are implemented with [[Technology:JavaServer Faces]], where the model is implemented with [[Technology:Hibernate]].
 
 == Illustration ==
 
