git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2343 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xquery/README
+++ b/xquery/README
@@ -11,7 +11,7 @@ exercise [[:Category:XML processing]] with [[Language:XQuery]]
 
 * [[Technology:Saxon]]: Free XQuery
 * [[Technology:BaseX]]: Free XQuery incl. update facility
-* [[Technology:JSE]]: Version 6 needed for BaseX
+* [[Technology:Java SE]]: Version 6 needed for BaseX
 
 == Features ==
 
